# temp_challenge

./: Dockerfile  README.md  build.sh  config.yaml  push.sh  pyproject.toml  requirements-dev.txt  requirements.txt  unit_test.sh
api/: pyproject.toml
api/src/temp_api/: __main__.py
src/temp_api/: api.py  main.py  test_api.py
yaml/: config.yaml
