[project]
name = "temp_api"
version = "2023.12.2"
description = "Temperature API server."
requires-python = ">=3.11"

dependencies = [
    "uvicorn",
    "fastapi",
    "prometheus_client",
    "requests",
    "types-requests",
]

[project.scripts]
temp_api = "temp_api.main:_main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.mypy]
follow_imports = "normal"
exclude = ["build"]
